added a watch for CR. Added k8s config. updated the dependencies

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
   
   phoenix:
     build: .
+    entrypoint: ["/app", "-is-cluster-ready=false"]
     ports:
       - "8080:8080"
     depends_on: 
