--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,10 @@
 version: '3'
 
 services:
-
   postgres:
-    image: 'postgres:14.5'
+    build:
+      context: ./postgres
     restart: always
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: env_manager
     logging:
       options:
         max-size: 10m
@@ -16,8 +12,8 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
-      - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      - ./postgres/sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+      # - ./postgres-data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4:latest
